--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
 		  1459 Oxford Street, PO BOX 15000 <br />
       Halifax NS B3H 4R2 <br />
       Canada <br />
-            (<a href="https://goo.gl/maps/85gEuf1hvgiZK1M17">Maps</a>
+            (<a href="https://goo.gl/maps/85gEuf1hvgiZK1M17">Maps</a>)
 		</div>
 	  </div>
 	</div>
