updated with jessie

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2023 LEAPH / Kelvin Fong. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="https://www.allanlab.org/">built from Allan Lab template.</a></p>
-              <p>We are part of <a href="https://www.dal.ca/">Dalhousie University</a> in ancestral and unceded territory of the Mi’kmaq.</p>
+		  <p>&copy 2024 LEAPH / Kelvin Fong. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="https://www.allanlab.org/">built from Allan Lab template.</a></p>
+              
 
 
 		   <p>  </p><p>
@@ -14,12 +14,11 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  Dalhousie University <br />
-		  Department of Earth and Environmental Sciences <br />
-		  1459 Oxford Street, PO BOX 15000 <br />
-      Halifax NS B3H 4R2 <br />
-      Canada <br />
-            (<a href="https://goo.gl/maps/85gEuf1hvgiZK1M17">Maps</a>)
+		  George Washington University <br />
+		  Department of Environmental and Occupational Health<br />
+		  950 New Hampshire Ave NW, 4th Floor<br />
+      Washington, DC 20037 <br />
+            (<a href="https://maps.app.goo.gl/SKL7SBsQNsypV9zB8">Maps</a>)
 		</div>
 	  </div>
 	</div>
